[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/characters/npc/NPC 100.png" type="Texture" id=1]
[ext_resource path="res://assets/ressources/collision_characters.tres" type="Shape2D" id=2]
[ext_resource path="res://assets/ui/interface/pkmnfl.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/characters/npc/NpcBase.gd" type="Script" id=5]
[ext_resource path="res://scenes/ui/interface/dialogs/TriggeredDialogue.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/characters/npc/DialogueDetection.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFontData" id=4]
antialiased = false
font_path = "res://assets/ui/interface/pkmnfl.ttf"

[sub_resource type="DynamicFont" id=5]
size = 11
font_data = SubResource( 4 )

[sub_resource type="CircleShape2D" id=6]
radius = 60.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 2, 30 )

[node name="NPC_BASE" type="KinematicBody2D" groups=["NPCs"]]
collision_layer = 16
collision_mask = 127
script = ExtResource( 5 )
floating_text = "Je me demande si..."

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -16, -28 )
texture = ExtResource( 1 )
centered = false
hframes = 4
vframes = 4
frame = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -1 )
rotation = 1.5708
shape = ExtResource( 2 )

[node name="LbAction" type="Label" parent="."]
visible = false
margin_left = 1.0
margin_top = 15.0
margin_right = 33.0
margin_bottom = 27.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
text = "Parler"

[node name="LbName" type="Label" parent="."]
visible = false
margin_left = -3.0
margin_top = 8.0
margin_right = 44.0
margin_bottom = 22.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Pas Maman"
align = 1
valign = 1

[node name="DialogueDetection" type="Area2D" parent="."]
visible = false
position = Vector2( -16, -28 )
collision_layer = 16
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueDetection"]
position = Vector2( 16, 21 )
shape = SubResource( 6 )

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false
position = Vector2( -16, -28 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( 16, -9 )
shape = SubResource( 7 )

[node name="TriggeredDialogue" parent="." instance=ExtResource( 6 )]
visible = false
margin_top = -47.0
margin_right = 28.0
margin_bottom = -14.0

[connection signal="body_entered" from="DialogueDetection" to="DialogueDetection" method="_on_DialogueDetection_body_entered"]
[connection signal="body_exited" from="DialogueDetection" to="DialogueDetection" method="_on_DialogueDetection_body_exited"]
